# advmla_assignment_2_api

./: Dockerfile  pyproject.toml  requirements.txt
app/: main.py  schemas.py
