[project]
name = "assignment-2-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Manh Tuan Nguyen",email = "143701233+tuannm3812@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "3.11.4"
dependencies = [
    "pandas (==2.2.2)",
    "scikit-learn (==1.5.1)",
    "fastapi (==0.111.0)",
    "uvicorn (==0.30.1)",
    "joblib (==1.4.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
